--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       Nokia
     </label>
     <img src="img/logo.png"> 
-    <input type="submit" value="Suscribete">
+    <input type="submit" value="Suscríbete al newsletter">
 
   </nav>
   <div class="topbanner">
