--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
       <div>
         <img src="img/nokia3.jpg">
       </div>
-   </div>
-
     </div>
+
+  </div>
+
     <div class="productos">
       PRODUCTOS
     </div>
@@ -42,10 +43,12 @@
         <br>
         <iframe width="416" height="234" src="https://www.youtube.com/embed/IX-gTobCJHs?autoplay=1&mute=1&controls=0" >
         </iframe>
-      
-
       </div>
-      <div class="testimonio">Testimonios</div>
+
+      <div class="testimonio">
+        Testimonios
+      </div>
+
       <div class="formulario">
         <label for="nombre">Nombre</label>
         <input type="text" id="nombre" placeholder="Tu nombre...">
