--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
         <input type="submit" value="Enviar">
       </div>
     </div>
-
+  <div id="gotopdiv">
+      <img src="img/flecha.png">
+  </div>
 </body>
 </html>
