--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       Nokia
     </label>
     <img src="img/logo.png"> 
-    <input type="submit" value="Suscríbete al newsletter">
+    <input type="submit" value="Suscríbete">
 
   </nav>
   <div class="topbanner">
@@ -33,15 +33,15 @@
 
   </div>
 
-    <div class="productos">
-      PRODUCTOS
-    </div>
+    
     <div class="middle">
-
+      <div class="productos">
+        PRODUCTOS
+      </div>
       <div class="video">
-        <label>Video</label>
+        <label>Concept Video</label>
         <br>
-        <iframe width="416" height="234" src="https://www.youtube.com/embed/IX-gTobCJHs?autoplay=1&mute=1&controls=0" >
+        <iframe src="https://www.youtube.com/embed/IX-gTobCJHs?autoplay=1&mute=1&controls=0" >
         </iframe>
       </div>
 
