--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="Script.js"></script>
     <title> Nokia Morph </title>
 </head>
-<body>
+<header>
   <nav class="navbar">
     <label>
       Nokia
@@ -32,6 +32,9 @@
     </div>
 
   </div>
+</header>
+<body>
+  
 
     
     <div class="middle">
