--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
-    <script src="Script.js"></script>
     <title> Nokia Morph </title>
 </head>
 <header>
@@ -34,18 +33,19 @@
   </div>
 </header>
 <body>
-  
-
-    
     <div class="middle">
+      <div class="informacion">
+        <h2>Nokia Morph</h2>
+        The Morph is a concept phone that uses nanotechnology and relies on a flexible body with a transparent screen. You can reshape the device into a smartwatch and tablet, as shown in the images and that happened even before tablets and smartwatches were big, which is crazy!
+      </div>
       <div class="productos">
         PRODUCTOS
       </div>
-      <div class="video">
+      <div class="conceptvideo">
         <label>Concept Video</label>
         <br>
-        <iframe src="https://www.youtube.com/embed/IX-gTobCJHs?autoplay=1&mute=1&controls=0" >
-        </iframe>
+        <video autoplay muted loop> <source src="vid/concept.mp4" type="video/mp4">   
+        </video>
       </div>
 
       <div class="testimonio">
@@ -57,25 +57,26 @@
         <input type="text" id="nombre" placeholder="Tu nombre...">
 
         <label for="apellido">Apellido</label>
-        <input type="text" id="apellido" placeholder="Tu apellido...">
+        <input type="text" id="apellido" placeholder="Tu apellido..." disabled>
 
         <label for="email">Email</label>
-        <input type="email" id="email" placeholder="Tu email...">
+        <input type="email" id="email" placeholder="Tu email..." disabled>
 
         <label for="país">País</label>
-        <input type="text" id="pais" placeholder="Tu país..."> </input>
+        <input type="text" id="pais" placeholder="Tu país..." disabled> 
 
         <label for="FecNac">Fecha de nacimiento</label>
         <br>
-        <input type="date" id="edad"> </input>
+        <input type="text" id="edad" disabled>
 
         <br>
         <br>
-        <input type="submit" value="Enviar">
+        <input type="submit" id="enviar" value="Enviar" disabled>
       </div>
     </div>
   <div id="gotopdiv">
       <img src="img/flecha.png">
   </div>
+  <script src="Script.js"></script>
 </body>
 </html>
