--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -53,6 +53,7 @@
       </div>
 
       <div class="formulario">
+        <form>
         <label for="nombre">Nombre</label>
         <input type="text" id="nombre" placeholder="Tu nombre...">
 
@@ -66,12 +67,13 @@
         <input type="text" id="pais" placeholder="Tu país..." disabled> 
 
         <label for="FecNac">Fecha de nacimiento</label>
-        <br>
+        
         <input type="text" id="edad" disabled>
 
         <br>
         <br>
         <input type="submit" id="enviar" value="Enviar" disabled>
+        </form>
       </div>
     </div>
   <div id="gotopdiv">
