--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="middle">
       <div class="informacion">
         <h2>Nokia Morph</h2>
-        The Morph is a concept phone that uses nanotechnology and relies on a flexible body with a transparent screen. You can reshape the device into a smartwatch and tablet, as shown in the images and that happened even before tablets and smartwatches were big, which is crazy!
+        Morph es un concepto de dispositivo móvil creado por Nokia, usando la nanotecnología que le permite sentar precedentes en la industria permitiendo que por primera vez, el factor forma de un móvil no importe.
       </div>
       <div class="productos">
         PRODUCTOS
@@ -80,5 +80,13 @@
       <img src="img/flecha.png">
   </div>
   <script src="Script.js"></script>
+  <footer>
+    <label>
+      Jorge Ramírez Molina
+    </label>
+    <p>
+      Esta página solo tiene fines educativos y las marcas que aparecen son propiedad intelectual de sus correspondientes filiales.
+    </p>
+  </footer>
 </body>
 </html>
