--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       Jorge Ramírez Molina
     </label>
     <p>
-      Esta página solo tiene fines educativos y las marcas que aparecen son propiedad intelectual de sus correspondientes filiales.
+      Esta página solo tiene fines educativos y las marcas que aparecen son propiedad intelectual registrada de sus correspondientes filiales.
     </p>
   </footer>
 </body>
