--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
         Morph es un concepto de dispositivo móvil creado por Nokia, usando la nanotecnología que le permite sentar precedentes en la industria permitiendo que por primera vez, el factor forma de un móvil no importe.
       </div>
       <div class="productos">
-        PRODUCTOS
+        <div id="producto0">
+            hola0
+        </div>
+        <div id="producto1">
+            hola1
+        </div>
+        <div id="producto2">
+            hola2
+        </div>
       </div>
       <div class="conceptvideo">
         <label>Concept Video</label>
