--- a/index.html
+++ b/index.html
@@ -35,23 +35,22 @@
 <body>
     <div class="middle">
       <div class="informacion">
-        <h2>Nokia Morph</h2>
+        <div id="txtInformacion"><h2>Nokia Morph</h2>
         Morph es un concepto de dispositivo móvil creado por Nokia, usando la nanotecnología que le permite sentar precedentes en la industria permitiendo que por primera vez, el factor forma de un móvil no importe.
+        </div>
+        <div id="fondoblur"> </div>
       </div>
       <div class="productos">
         <div id="producto0">
-            hola0
         </div>
         <div id="producto1">
-            hola1
         </div>
         <div id="producto2">
-            hola2
         </div>
       </div>
       <div class="conceptvideo">
         <label>Concept Video</label>
-        <br>
+       
         <video autoplay muted loop> <source src="vid/concept.mp4" type="video/mp4">   
         </video>
       </div>
@@ -61,6 +60,8 @@
       </div>
 
       <div class="formulario">
+        <h2 id="labelformulario"> Suscríbete a nuestro newsletter</h2>
+        <br>
         <form>
         <label for="nombre">Nombre</label>
         <input type="text" id="nombre" placeholder="Tu nombre...">
