--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <H1 id="textbanner">Vive el futuro</H1>
     <div id="diapositiva">
       <div>
-        <img src="img/nokia1.jpg">
+        <img src="img/nokia1.png">
       </div>
       <div>
-        <img src="img/nokia2.jpg">
+        <img src="img/nokia2.png">
       </div>
       <div>
-        <img src="img/nokia3.jpg">
+        <img src="img/nokia3.png">
       </div>
     </div>
 
