--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
     </label>
     <img src="img/logo.png"> 
     <input type="submit" value="Suscríbete">
-
   </nav>
-  <div class="topbanner">
-    <H1 id="textbanner">Vive el futuro</H1>
     <div id="diapositiva">
       <div>
         <img src="img/nokia1.jpg">
@@ -56,7 +53,18 @@
       </div>
 
       <div class="testimonio">
-        Testimonios
+        <div id="testimonio0">
+          <label id="nombre0"></label>
+          <p id="testimonio0"></p>
+        </div>
+        <div id="testimonio1">
+          <label id="nombre1"></label>
+          <p id="testimonio1"></p>
+        </div>
+        <div id="testimonio2">
+          <label id="nombre2"></label>
+          <p id="testimonio2"></p>
+        </div>
       </div>
 
       <div class="formulario">
