--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div id="fondoblur"> </div>
       </div>
-      <div class="productos">
+      <div class="productos" id="producto">
         <div id="producto0">
         </div>
         <div id="producto1">
@@ -52,7 +52,7 @@
         </video>
       </div>
 
-      <div class="testimonio">
+      <div class="testimonio"  id="testimonio">
         <div id="testimonio0">
           <label id="nombre0"></label>
           <p id="testimonio0"></p>
