--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <input type="submit" value="Suscríbete">
   </nav>
     <div id="diapositiva">
+      <label id="textbanner"> Vive el futuro</label>
       <div>
         <img src="img/nokia1.jpg">
       </div>
@@ -33,7 +34,7 @@
     <div class="middle">
       <div class="informacion">
         <div id="txtInformacion"><h2>Nokia Morph</h2>
-        Morph es un concepto de dispositivo móvil creado por Nokia, usando la nanotecnología que le permite sentar precedentes en la industria permitiendo que por primera vez, el factor forma de un móvil no importe.
+         <p>Morph es un concepto de dispositivo móvil creado por Nokia, usando la nanotecnología que le permite sentar precedentes en la industria permitiendo que por primera vez, el factor forma de un móvil no importe. El futuro en tus manos.</p>
         </div>
         <div id="fondoblur"> </div>
       </div>
