--- a/index.html
+++ b/index.html
@@ -57,14 +57,17 @@
         <div id="testimonio0">
           <label id="nombre0"></label>
           <p id="testimonio0"></p>
+          <p id="fecha0"></p>
         </div>
         <div id="testimonio1">
           <label id="nombre1"></label>
           <p id="testimonio1"></p>
+          <p id="fecha1"></p>
         </div>
         <div id="testimonio2">
           <label id="nombre2"></label>
           <p id="testimonio2"></p>
+          <p id="fecha2"></p>
         </div>
       </div>
 
