--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       Nokia
     </label>
     <img src="img/logo.png"> 
+      <a> Inicio</a>
+      <a> Productos</a>
+      <a> Soporte</a>
     <input type="submit" value="Suscríbete">
   </nav>
     <div id="diapositiva">
