--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
           <p id="fecha2"></p>
         </div>
       </div>
+      <div id="divCambiar">
+        <input id="cambiarVista" type="button" value="cambiar vista">
+      </div>
+
 
       <div class="formulario">
         <h2 id="labelformulario"> Suscríbete a nuestro newsletter</h2>
